--- a/themes/gartenzwerge/css/links.css
+++ b/themes/gartenzwerge/css/links.css
@@ -4,13 +4,12 @@ a:focus { font-weight:normal; color:#94ac96; text-decoration:none; }
 a:hover { font-weight:normal; color:#94ac96; text-decoration:none; }
 a:active { font-weight:normal; color:#535D54; text-decoration:none; }
 
+#footerLinks a{ font-size:20px;}
+
 #footerLinks a:link { font-weight:normal; color:#aaa; text-decoration:none; }
 #footerLinks a:visited { font-weight:normal; color:#aaa; text-decoration:none; }
 #footerLinks a:focus { font-weight:normal; color:#94ac96; text-decoration:none; }
-#footerLinks a:hover { font-weight:normal; color:#94ac96; text-decoration:none; }
+#footerLinks a:hover { font-weight:normal; color:#94ac96; text-decoration:underline; }
 #footerLinks a:active { font-weight:normal; color:#535D54; text-decoration:none; }
 
-#footerLinks a{
-	float:left;
-	margin-left:30px;}
 
