Interface Update - pre-Beta

--- a/themes/gartenzwerge/css/content.css
+++ b/themes/gartenzwerge/css/content.css
@@ -34,6 +34,7 @@
 	border-top-right-radius:15px;
 	color:#bcc2ba;
 	font-size:18px;
+	margin-bottom:0 !important;
 	}
 
 .titleHr{
@@ -48,7 +49,7 @@
 
 /** Artikel - Ansicht **/
 .articleText,.articleDetails{
-	padding:0px 10px 40px 10px;;
+	padding:0px 10px 10px 10px;;
 	float:left;
 	clear:both;}
 	
@@ -63,3 +64,119 @@
 	text-align:center;}	
 	
 dt { float:left; cear:left; width:10em; }
+
+#articleList{
+	position:relative;
+	float:left;
+	clear:both;
+	margin-top:55px;}
+	
+.articleListItemWrapper{
+	position:relative;
+	float:left;
+	clear:both;
+	margin-bottom:20px;
+	height:120px;
+	width:1000px;
+	padding:10px 15px;
+	background-color:rgba(210,210,210,0.0);
+	transition:all ease-out 500ms;}
+
+.articleListItemWrapper:hover{
+	background-color:rgba(210,210,210,0.5);
+	}
+
+.articleListImgContainer{
+	position:relative;
+	float:left;
+	top:0;
+	width:120px;
+	height:120px;
+	border:1px solid #535d54;
+	background-color:white;
+	text-align:center;}	
+
+.articleListImgContainer div{
+	float:left;
+	clear:both;
+	position:relative;
+	margin-bottom:10px;}
+
+/*#userShowWrapper div:nth-child(5){
+	clear:none;}*/
+
+.articleInfos div{
+	position:relative;
+	float:left;
+	margin-left:25px;
+	margin-top:15px;}
+
+.articleInfos div label{
+	position:relative;
+	float:left;
+	background-color:#535D54;
+	border-top-left-radius:15px;
+	border-bottom-left-radius:15px;
+	height:30px;
+	width:120px;
+	line-height:30px;
+	color:#E6E6E6;
+	text-align:center;}
+
+.articleInfos div span{
+	position:relative;
+	float:left;
+	width:auto;
+	padding-left:10px;
+	padding-right:10px;
+	min-width:120px;
+	width:auto;
+	height:29px;
+	line-height:30px;
+	border-bottom:1px solid #535D54;}
+
+/** userShowWrapper **/
+#userShowWrapper{
+	 clear: both;
+  float: left;
+  margin-top: 25px;
+  position: relative;}
+  
+#userShowWrapper > div {
+  clear: both;
+  margin-bottom:15px;
+  float:left;
+}
+
+#articleInfos div{
+	float:left;
+	clear:both;
+	position:relative;
+	margin-bottom:10px;}
+
+/*#userShowWrapper div:nth-child(5){
+	clear:none;}*/
+
+#userShowWrapper div label{
+	position:relative;
+	float:left;
+	background-color:#535D54;
+	border-top-left-radius:15px;
+	border-bottom-left-radius:15px;
+	height:30px;
+	width:120px;
+	line-height:30px;
+	color:#E6E6E6;
+	text-align:center;}
+
+#userShowWrapper div span{
+	position:relative;
+	float:left;
+	width:auto;
+	padding-left:10px;
+	padding-right:10px;
+	min-width:220px;
+	width:auto;
+	height:29px;
+	line-height:30px;
+	border-bottom:1px solid #535D54;}
