--- a/themes/gartenzwerge/css/basic.css
+++ b/themes/gartenzwerge/css/basic.css
@@ -14,9 +14,10 @@ body{
 #header {
   	float: left;
 	height: 115px;
-	position: absolute;
+	position: fixed;
 	width: 100%;
-	z-index: 50;
+	z-index: 150;
+	background-image:url("../resourcen/icons/brushed.png");
 }
 
 #logo {
@@ -59,7 +60,7 @@ body{
 
 #menu {
   left: 50%;
-  margin-left: 145px;
+  margin-left: 245px;
   position: relative;
   top: 65px;
 }
@@ -85,7 +86,7 @@ body{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 70% auto;
-  border: 2px solid #E5E5E5; /* #535D54 E5E5E5 4E544E*/
+  border: 2px solid #A9AEAA; /* #535D54 E5E5E5 4E544E*/
   transition: background-size 200ms ease-in, border 200ms ease-in;
   -moz-transition: background-size 200ms ease-in, border 200ms ease-in;
   -ms-transition: background-size 200ms ease-in, border 200ms ease-in;
@@ -100,12 +101,9 @@ body{
 	background-image: url("../resourcen/icons/indoor.png");}
 
 .menuItemContainer:nth-child(2) .menuButton{
-	background-image: url("../resourcen/icons/outdoor.png");}
-
-.menuItemContainer:nth-child(3) .menuButton{
 	background-image: url("../resourcen/icons/profil.png");}
 
-.menuItemContainer:nth-child(4) .menuButton{
+.menuItemContainer:nth-child(3) .menuButton{
 	background-image: url("../resourcen/icons/warenkorb.png");}
  
 #f1_container {
@@ -157,13 +155,13 @@ body{
 
 #slider{
 	float:left;
-	position:relative;
+	position:fixed;
 	top:115px;
 	width:100%;
 	height:auto;
-	border:3px solid #535D54;}
+	border-top:3px solid #535D54;}
 
-#deko {
+/*#deko {
   background-image: url("../resourcen/images/deko_grass.png");
   background-position: center top;
   background-repeat: no-repeat;
@@ -174,7 +172,7 @@ body{
   top: 115px;
   width: 100%;
   z-index: 40;
-}
+}*/
 
 #main{
 	width:1200px;
@@ -184,7 +182,8 @@ body{
 	margin-left:-600px;
 	top:450px;
 	padding-bottom:50px;
-	z-index:50;}
+	z-index:50;
+	}
 
 #contentMenu{
 	width:100%;
@@ -216,7 +215,7 @@ body{
 	position:absolute;
 	top:0;
 	right:0;
-	height:100px;
+	height:160px;
 	width:350px;
 	padding:5px;
 	background-color:#636a63;
@@ -233,6 +232,17 @@ body{
 	border-bottom-left-radius:25px;
 	border-bottom-right-radius:25px;
 	padding:40px 100px;}
+
+#contentDeko{
+	position:absolute;
+	bottom:0;
+	left:0;
+	width:100%;
+	height:400px;
+	background-image:url("../resourcen/images/gras1.png");
+	background-position: center bottom;
+  	background-repeat: no-repeat;
+ 	background-size: 100% auto;}
 
 #footerWrapper{
 	position:fixed;
